# CDF-BootCamp-Ruben-Gonzalez

./: pyproject.toml
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.test copy.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.DataSet.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: functions.Function.yaml  schedules.Schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
